# hyunjin

./: .gitattributes  .gitignore  .mcp.json  .npmrc  .prettierrc  AGENTS.md  CHANGESETS.md  CLAUDE.md  Makefile  README.md  berriz-cdn-architecture-research.md  berriz-content-candidates.md  berriz-research.md  biome.json  closed-loop.md  gatsby-meta-config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  python.md  readme.md  todo.md
.claude/: settings.local.json
.codex/: config.toml
.cursor/rules/: project-rule.mdc
.github/workflows/: deploy-blog.yml  release.yml  test.yml
.playwright-mcp/: naver-snapshot.yml  page-2026-04-07T15-28-43-355Z.yml  page-2026-04-07T15-58-00-641Z.yml  page-2026-04-07T15-58-32-835Z.yml
.storybook/: main.js
compiler/: CLAUDE.md
compiler/.claude/: settings.local.json
compiler/babel-plugin-react-compiler/: compiler-quick-start.md  tsup.config.ts
compiler/react-compiler-playground/: .eslintrc.json  next.config.js  package.json  (+2 more)
configs/: package.json
constants/: breakpoints.ts
contexts/: scrollObserver.tsx
dogfood-output/: report.md
gatsby-starter-blog/: package-lock.json  package.json
hooks/: useScroll.tsx
opencode/: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  README.zh-CN.md  README.zh-TW.md  STATS.md  STYLE_GUIDE.md  bunfig.toml  flake.nix  install  package.json  sst-env.d.ts  sst.config.ts  tsconfig.json  turbo.json
pages/: _app.tsx  _document.tsx  index.tsx  test.tsx
scripts/: g2b_probe.py
styles/: globalStyle.ts  media.ts  theme.ts
이전홈페이지/: package.json
(+1141 files in other folders)
